--- a/templates/javascript.html
+++ b/templates/javascript.html
@@ -13,43 +13,50 @@
 
 <body>
   <header>
-    <nav>
-      <a id="logoPK" href="../index.html">
-        <img src="../static/logoPK.png" alt="">
-      </a>
-      <ul>
-        <li>
-          <a href="cursos.html">
-            CURSOS
-          </a>
-        </li>
-        <li>
-          <a href="https://www.instagram.com/ti.udia/" target="_blank">
-            BLOG
-          </a>
-        </li>
-        <li>
-          <a href="sobre.html">
-            SOBRE
-          </a>
-        </li>
-        <li>
-          <a href="hall da fama.html">
-            HALL DA FAMA
-          </a>
-        </li>
-        <li>
-          <a href="validar certificado.html">
-            VALIDAR CERTIFIDADO
-          </a>
-        </li>
-        <li>
-          <a href="formulario de inscrição.html">
-            AFILIADOS
-          </a>
-        </li>
-      </ul>
-    </nav>
+    <header>
+      <nav>
+        <a href="menu.html">
+          <picture>
+            <img id="menu" src="../static/menu.png" alt="">
+          </picture>
+        </a>
+        <a id="logoPK" href="../index.html">
+          <img src="../static/logoPK.png" alt="">
+        </a>
+        <ul class="minhaDivNavApareceESome">
+          <li>
+            <a href="../templates/cursos.html">
+              CURSOS
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/ti.udia/" target="_blank">
+              BLOG
+            </a>
+          </li>
+          <li>
+            <a href="sobre.html">
+              SOBRE
+            </a>
+          </li>
+          <li>
+            <a href="hall da fama.html">
+              HALL DA FAMA
+            </a>
+          </li>
+          <li>
+            <a href="validar certificado.html">
+              VALIDAR CERTIFICADO
+            </a>
+          </li>
+          <li>
+            <a href="../templates/formulario de inscrição.html">
+              AFILIADOS
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
   </header>
   <section class="finalizar">
     <h1>PROGRAMANDO EM JAVA SCRIPT</h1>
