--- a/templates/IOT.html
+++ b/templates/IOT.html
@@ -22,12 +22,17 @@
   </a>
   <header>
     <nav>
+      <a href="menu.html">
+        <picture>
+          <img id="menu" src="../static/menu.png" alt="">
+        </picture>
+      </a>
       <a id="logoPK" href="../index.html">
         <img src="../static/logoPK.png" alt="">
       </a>
-      <ul>
+      <ul class="minhaDivNavApareceESome">
         <li>
-          <a href="cursos.html">
+          <a href="../templates/cursos.html">
             CURSOS
           </a>
         </li>
@@ -48,11 +53,11 @@
         </li>
         <li>
           <a href="validar certificado.html">
-            VALIDAR CERTIFIDADO
+            VALIDAR CERTIFICADO
           </a>
         </li>
         <li>
-          <a href="formulario de inscrição.html">
+          <a href="../templates/formulario de inscrição.html">
             AFILIADOS
           </a>
         </li>
