--- a/templates/os melhores em - MARCAÇÕES HTML E CSS.html
+++ b/templates/os melhores em - MARCAÇÕES HTML E CSS.html
@@ -14,10 +14,15 @@
 <body>
   <header>
     <nav>
+      <a href="menu.html">
+        <picture>
+          <img id="menu" src="../static/menu.png" alt="">
+        </picture>
+      </a>
       <a id="logoPK" href="../index.html">
         <img src="../static/logoPK.png" alt="">
       </a>
-      <ul>
+      <ul class="minhaDivNavApareceESome">
         <li>
           <a href="../templates/cursos.html">
             CURSOS
