--- a/templates/formulario de inscrição.html
+++ b/templates/formulario de inscrição.html
@@ -142,11 +142,20 @@
         **Lembre-se:** ter um domínio e hospedagem de qualidade é o primeiro passo para construir uma presença online
         forte e duradoura.</p>
 
+    <ul>
       <a href="https://hostinger.com.br?REFERRALCODE=1PKPRODUCES30">
-        <button>
-          Hospedagem e Dominio Hostinger
-        </button>
-      </a>
+        Hospedagem
+    </a>
+      <a href="https://hostinger.com.br?REFERRALCODE=1PKPRODUCES30">
+        Dominio
+    </a>
+    <a href="fomulario.html">
+        Formulario
+    </a>
+    <a onclick="window.print()">
+      Baixar
+    </a>
+    </ul>
       <p>
         Veja os termos e condições na plataforma para finalizar o contrato
       </p>
@@ -156,11 +165,8 @@
       <a href="../static/CONTRATO BASICO exemplar.pptx" download="CONTRATO BASICO exemplar.pptx">
         Termos e condições
       </a>
-      <iframe id="iframe" width="100%" height="700px"
-        src="https://docs.google.com/forms/d/e/1FAIpQLSc-KSjObS8_6Lmiyj0ZU4VF-nur8QSuPDyZ-iDBIJyQUvDwXg/viewform?embedded=true"
-        frameborder="0" loop marginheight="0" marginwidth="0">Carregando…</iframe>
-    </section>
-  </div>
+         </section>
+          </div>
 </body>
 
 </html>
