--- a/templates/formulario de inscrição.html
+++ b/templates/formulario de inscrição.html
@@ -12,16 +12,7 @@
 </head>
 
 <body>
-  <picture id="btnWhatsapp">
-    <a href="https://maper.info/29j736" target="_blank">
-      <video muted autoplay loop>
-        <source src="FALE-CONOSCO-DESKTOP.mp4" media="(min-width: 501px)"
-          style="video::internal-media-controls{display: none;}">
-        <source src="FALE-CONOSCO-MOBILE.mp4" media="(max-width: 500px)"
-          style="video::internal-media-controls{display: none;}">
-      </video>
-    </a>
-  </picture>
+
   <header>
     <nav>
       <a href="menu.html">
@@ -67,20 +58,23 @@
     </nav>
   </header>
   <div class="interface">
+    <h2>
+      Trabalhe conosco
+    </h2>
     <section id="formularioInscricao">
       <h1>
-        Trabalhe conosco
-      </h1>
-      <li>
         Já pensou em se tornar um parceiro aqui na Infoprodutos e começar a lucrar na internet hoje.
-      </li>
-      <p>
-        Caso queira contratar algum tipo de servico como Trafego Pago/Organico, Desenvolvimento Web, Correção de
-        códigos, CEO, Productrs maneger entre outros preencha o formulario abaixo.
-      </p>
-      <h2>
-        É INDISPENSAVÉL A CONTRATAÇÃO DE UM DOMINIO E HOSPERAGEM EM CASOS DE DESENVOLVIMENTO COMPLETO DE PROJETOS NA WEB
-      </h2>
+      </h1>
+      <div class="formularioInscricao">
+        <h2>
+          Caso queira contratar algum tipo de servico como Trafego Pago/Organico, Desenvolvimento Web, Correção de
+          códigos, CEO, Productrs maneger entre outros preencha o formulario abaixo.
+        </h2>
+        <p>
+          É INDISPENSAVÉL A CONTRATAÇÃO DE UM DOMINIO E HOSPERAGEM EM CASOS DE DESENVOLVIMENTO COMPLETO DE PROJETOS NA
+          WEB
+        </p>
+      </div>
       <h1>
         Indicações
       </h1>
@@ -111,24 +105,24 @@
       <h2>
         Benefícios de Ter Domínio e Hospedagem:
       </h2>
-      <ul>
-        <li>
+      <div class="formularioInscricao">
+        <p>
           **Visibilidade:** Facilita as pessoas te encontrarem na internet.
-        </li>
-        <li>
+        </p>
+        <p>
           **Credibilidade:** Transmite profissionalismo e confiança para seus visitantes.
-        </li>
-        <li>
+        </p>
+        <p>
           **Acessibilidade:** Garante que seu site esteja sempre online e disponível.
-        </li>
-        <li>
+        </p>
+        <p>
           **Controle:** Você tem total controle sobre seu endereço e seus dados.
-        </li>
-        <li>
+        </p>
+        <p>
           **Possibilidade de Criar E-mails Profissionais:** Com o seu domínio, você pode criar e-mails personalizados,
           como "[endereço de e-mail removido]".
-        </li>
-      </ul>
+        </p>
+      </div>
       <h2>
         Comece sua Presença Online Agora Mesmo!
 
@@ -141,32 +135,32 @@
       <p>
         **Lembre-se:** ter um domínio e hospedagem de qualidade é o primeiro passo para construir uma presença online
         forte e duradoura.</p>
-
-    <ul>
-      <a href="https://hostinger.com.br?REFERRALCODE=1PKPRODUCES30">
-        Hospedagem
-    </a>
-      <a href="https://hostinger.com.br?REFERRALCODE=1PKPRODUCES30">
-        Dominio
-    </a>
-    <a href="fomulario.html">
-        Formulario
-    </a>
-    <a onclick="window.print()">
-      Baixar
-    </a>
-    </ul>
       <p>
         Veja os termos e condições na plataforma para finalizar o contrato
       </p>
+      <ul id="opcaoespagamento">
+        <a href="https://hostinger.com.br?REFERRALCODE=1PKPRODUCES30">
+          Hospedagem
+        </a>
+        <a href="https://hostinger.com.br?REFERRALCODE=1PKPRODUCES30">
+          Dominio
+        </a>
+        <a href="fomulario.html">
+          Formulario
+        </a>
+        <a onclick="window.print()">
+          Baixar
+        </a>
+      </ul>
       <li>
-        Convidar cliente
+        <p>
+          Convidar cliente
+        </p> <a href="../static/CONTRATO BASICO exemplar.pptx" download="CONTRATO BASICO exemplar.pptx">
+          Termos e condições
+        </a>
       </li>
-      <a href="../static/CONTRATO BASICO exemplar.pptx" download="CONTRATO BASICO exemplar.pptx">
-        Termos e condições
-      </a>
-         </section>
-          </div>
+    </section>
+  </div>
 </body>
 
 </html>
