--- a/templates/formulario de inscrição.html
+++ b/templates/formulario de inscrição.html
@@ -62,22 +62,22 @@
       Trabalhe conosco
     </h2>
     <section id="formularioInscricao">
-      <h1>
+      <h2>
         Já pensou em se tornar um parceiro aqui na Infoprodutos e começar a lucrar na internet hoje.
-      </h1>
+      </h2>
       <div class="formularioInscricao">
-        <h2>
+        <p>
           Caso queira contratar algum tipo de servico como Trafego Pago/Organico, Desenvolvimento Web, Correção de
           códigos, CEO, Productrs maneger entre outros preencha o formulario abaixo.
-        </h2>
-        <p>
+        </p>
+        <p style="color: red; font-size: smaller;">
           É INDISPENSAVÉL A CONTRATAÇÃO DE UM DOMINIO E HOSPERAGEM EM CASOS DE DESENVOLVIMENTO COMPLETO DE PROJETOS NA
           WEB
         </p>
       </div>
-      <h1>
+      <h2>
         Indicações
-      </h1>
+      </h2>
       <h1>Hospedagem e Domínio: A Casa e o Endereço do Seu Site na Internet</h1>
 
       <h2>O que é um Domínio?</h2>
@@ -138,7 +138,6 @@
       <p>
         Veja os termos e condições na plataforma para finalizar o contrato
       </p>
-      <ul id="opcaoespagamento">
         <a href="https://hostinger.com.br?REFERRALCODE=1PKPRODUCES30">
           Hospedagem
         </a>
@@ -151,14 +150,12 @@
         <a onclick="window.print()">
           Baixar
         </a>
-      </ul>
-      <li>
         <p>
           Convidar cliente
-        </p> <a href="../static/CONTRATO BASICO exemplar.pptx" download="CONTRATO BASICO exemplar.pptx">
+        </p>
+         <a href="../static/CONTRATO BASICO exemplar.pptx" download="CONTRATO BASICO exemplar.pptx">
           Termos e condições
         </a>
-      </li>
     </section>
   </div>
 </body>
