--- a/templates/hall da fama.html
+++ b/templates/hall da fama.html
@@ -69,19 +69,19 @@
         Se esforce para ir até a linha de chegada e concluir seu curso com máximo de aproveitamento.
       </p>
       <article>
-        <a href="Todas as pontuações acumuladas.html">
+        <a style="color: white;" href="Todas as pontuações acumuladas.html">
          TODAS AS OPONTUAÇÕES ACUMULADAS
         </a>
-        <a href="os melhores em - INTERNET DAS COISAS.html">
+        <a style="color: white;" href="os melhores em - INTERNET DAS COISAS.html">
           INTERNET DAS COISAS
         </a>
-        <a href="os melhores em - MARCAÇÕES HTML E CSS.html">
+        <a style="color: white;" href="os melhores em - MARCAÇÕES HTML E CSS.html">
        MARCAÇÕES HTML E CSS
         </a>
-        <a href="os melhores em - PROGRAMANDO EM PYTHON.html">
+        <a style="color: white;" href="os melhores em - PROGRAMANDO EM PYTHON.html">
           PROGRAMANDO EM PYTHON
         </a>
-        <a href="os melhores em - PROGRAMANDO EM JAVA SCRIPT.html">
+        <a style="color: white;" href="os melhores em - PROGRAMANDO EM JAVA SCRIPT.html">
       PROGRAMANDO EM JAVA SCRIPT
         </a>
       </article>
