--- a/static/style.css
+++ b/static/style.css
@@ -1,11 +1,15 @@
 * {
     margin: 0;
     padding: 0;
+   }
+a{
+    border-radius: 15px;
+    margin: 15px;
+    padding: 5px;
+}
+.interface {
     font-family: sans-serif;
     font-size: x-large;
-}
-
-.interface {
     margin-top: 20vh;
 }
 
@@ -37,7 +41,7 @@ button {
     margin: auto;
     padding: 5px;
     margin-bottom: 50px;
-    background-color: #230d736b;
+    /* background-color: #230d736b; */
     color: white;
     border-radius: 15px;
     text-align: end;
