--- a/templates/Todas as pontuações acumuladas.html
+++ b/templates/Todas as pontuações acumuladas.html
@@ -2,13 +2,13 @@
 <html lang="pt-br">
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+ 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../static/style.css" />
   <link rel="shortcut icon" href="../static/logoPK.png" type="image/x-icon" />
-  <title>HALL DA FAMA</title>
+  <title>INFOPRODUTOS</title>
 </head>
 
 <body>
@@ -69,20 +69,20 @@
         Se esforce para ir até a linha de chegada e concluir seu curso com máximo de aproveitamento.
       </p>
       <article>
-        <a href="Todas as pontuações acumuladas.html">
-          <option value="Todas as pontuações acumuladas">Todas as pontuações acumuladas</option>
+        <a style="color: white;" href="Todas as pontuações acumuladas.html">
+         TODAS AS OPONTUAÇÕES ACUMULADAS
         </a>
-        <a href="os melhores em - INTERNET DAS COISAS.html">
-          <option value="INTERNET DAS COISAS">INTERNET DAS COISAS</option>
+        <a style="color: white;" href="os melhores em - INTERNET DAS COISAS.html">
+          INTERNET DAS COISAS
         </a>
-        <a href="os melhores em - MARCAÇÕES HTML E CSS.html">
-          <option value="MARCAÇÕES HTML E CSS">MARCAÇÕES HTML E CSS</option>
+        <a style="color: white;" href="os melhores em - MARCAÇÕES HTML E CSS.html">
+       MARCAÇÕES HTML E CSS
         </a>
-        <a href="os melhores em - PROGRAMANDO EM PYTHON.html">
-          <option value="PROGRAMANDO EM PYTHON">PROGRAMANDO EM PYTHON</option>
+        <a style="color: white;" href="os melhores em - PROGRAMANDO EM PYTHON.html">
+          PROGRAMANDO EM PYTHON
         </a>
-        <a href="os melhores em - PROGRAMANDO EM JAVA SCRIPT.html">
-          <option value="PROGRAMANDO EM JAVA SCRIPT">PROGRAMANDO EM JAVA SCRIPT</option>
+        <a style="color: white;" href="os melhores em - PROGRAMANDO EM JAVA SCRIPT.html">
+      PROGRAMANDO EM JAVA SCRIPT
         </a>
       </article>
     </section>
