--- a/templates/cursos.html
+++ b/templates/cursos.html
@@ -58,34 +58,27 @@
   </header>
   <div class="interface">
     <img style="float: right;" src="../static/fundo.png" alt="">
-   <div id="loocursos">
-    <h2>Infoprodutos: Cursos Online para Você Aprender e Crescer!</h2>
-    <ul id="cursos" class="lista" style="columns: 4; background-color: white; box-shadow: 0 0 0 ;">
-      <li>IOT - INTERNET DAS COISAS
+    <div id="loocursos">
+      <h2>Infoprodutos: Cursos Online para Você Aprender e Crescer!</h2>
+      <ul id="cursos" class="lista" style="columns: 4; background-color: white; box-shadow: 0 0 0 ;">
         <a href="IOT.html" target="_blank">
+          IOT - INTERNET DAS COISAS
           <video src="../static/IOT - INTERNET DAS COISAS.mp4" loop muted autoplay></video>
         </a>
-      </li>
-      <li>
-        MARCAÇÕES HTML E CSS
-        <a href="marcações.html" target="_blank"><video src="../static/MARCAÇÕES HTML E CSS.mp4" loop muted
-            autoplay></video>
+        <a href="marcações.html" target="_blank">
+          MARCAÇÕES HTML E CSS
+          <video src="../static/MARCAÇÕES HTML E CSS.mp4" loop muted autoplay></video>
         </a>
-      </li>
-      <li>
-        PROGRAMANDO EM PYTHON
-        <a href="python.html" target="_blank"><video src="../static/PROGRAMANDO EM PYTHON.mp4" loop muted
-            autoplay></video>
+        <a href="python.html" target="_blank">
+          PROGRAMANDO EM PYTHON
+          <video src="../static/PROGRAMANDO EM PYTHON.mp4" loop muted autoplay></video>
         </a>
-      </li>
-      <li>
-        PROGRAMANDO EM JAVA SCRIPT
-        <a href="javascript.html" target="_blank"><video src="../static/PROGRAMANDO EM JAVA SCRIPT.mp4" loop muted
-            autoplay></video>
+        <a href="javascript.html" target="_blank">
+          PROGRAMANDO EM JAVA SCRIPT
+          <video src="../static/PROGRAMANDO EM JAVA SCRIPT.mp4" loop muted autoplay></video>
         </a>
-      </li>
-    </ul>
-   </div>
+      </ul>
+    </div>
   </div>
 </body>
 
