--- a/templates/menu.html
+++ b/templates/menu.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/style.css">
-    <title>menu</title>
-</head>
+    <title>INFOPRODUTOS</title>
+  </head>
 <body style="background-color: #230D73;">
   <a id="logoPK" href="../index.html">
     <img src="../static/logoPK.png" alt="">
