--- a/templates/IOT.html
+++ b/templates/IOT.html
@@ -8,18 +8,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../static/style.css" />
   <link rel="shortcut icon" href="../static/logoPK.png" type="image/x-icon" />
-  <title>INFOPRODUTOS</title>
+  <title>
+    INFOPRODUTOS
+  </title>
 </head>
 
 <body>
-  <a href="https://maper.info/2vNhu6asdas" target="_blank">
-    <video muted autoplay loop id="btnWhatsapp">
-      <source src="/static/FALE-CONOSCO-DESKTOP.mp4" media="(min-width: 501px)"
-        style="video::internal-media-controls{display: none;}">
-      <source src="/static/FALE-CONOSCO-MOBILE.mp4" media="(max-width: 500px)"
-        style="video::internal-media-controls{display: none;}">
-    </video>
-  </a>
   <header>
     <nav>
       <a href="menu.html">
@@ -64,49 +58,97 @@
       </ul>
     </nav>
   </header>
-  <section class="finalizar">
-    <h1>IOT - INTERNET DAS COISAS</h1>
-    <a href="https://maper.info/2vNhu6asdas" target="_blank"><button>Cadastra-se</button></a>
-    <video src="../static/IOT - INTERNET DAS COISAS.mp4" loop muted autoplay></video>
-    <h2>Habilidades Essenciais para Programar em IoT</h2>
-    <li>A Internet das Coisas (IoT) conecta dispositivos físicos à internet, permitindo a coleta e troca de dados em
-      tempo real. Programar para a IoT exige um conjunto de habilidades específicas:</li>
-    <h3>1. Hardware e Eletrônica</h3>
-    <li>Componentes básicos: Microcontroladores, sensores, atuadores, LEDs etc.</li>
-   <ul>
-    <li>Protocolos de comunicação: Wi-Fi, Bluetooth, Zigbee, LoRaWAN etc.</li>
-    <li>Protoboard e plataformas de desenvolvimento: Arduino, ESP8266, Raspberry Pi etc.</li>
-    <li>Eletrônica básica: Conceitos de voltagem, corrente, resistência e circuitos.</li>
-   </ul>
-    <h3>2. Programação</h3>
-    <li>Linguagens de programação: C/C++, Python, JavaScript etc.</li>
-<ul>
-  <li>Ferramentas de desenvolvimento: IDEs (Arduino IDE, Visual Studio Code etc.), SDKs, frameworks.</li>
-  <li>Programação embarcada: Desenvolvimento de software para microcontroladores.</li>
-  <li>Conceitos de IoT: Arquitetura de sistemas IoT, segurança, nuvem, protocolos de comunicação.</li>
-</ul>
-    <h3>3. Redes e Conectividade</h3>
-    <li>Redes TCP/IP: Funcionamento de redes, endereços IP, protocolos de transporte.</li>
-   <ul>
-    <li>Wi-Fi, Bluetooth, Zigbee, LoRaWAN: Características, vantagens e desvantagens de cada protocolo.</li>
-    <li>Segurança de rede: Criptografia, autenticação e autorização para dispositivos IoT.</li>
-   </ul>
-    <h3>4. Nuvem e Bancos de Dados</h3>
-    <li>Plataformas de nuvem: AWS, Azure, Google Cloud etc.</li>
-    <ul>
-    <li>Armazenamento de dados: NoSQL, SQL, bancos de dados em tempo real.</li>
-    <li>Análise de dados: Ferramentas e técnicas para análise de dados coletados por dispositivos IoT.</li>
-    </ul>
-    <h3>5. Soft Skills</h3>
-    <li>Resolução de problemas: Habilidade para identificar e solucionar problemas de hardware e software.</li>
-    <ul>
-    <li>Criatividade e inovação: Capacidade de pensar fora da caixa e desenvolver soluções inovadoras para problemas
-      reais.</li>
-    <li>Aprendizagem contínua: A área de IoT está em constante evolução, por isso é importante se manter atualizado
-      com as novas tecnologias e tendências.</li>
-    </ul>
-    </ul>
-    <li>Com as habilidades e recursos certos, você estará pronto para começar a programar para a IoT e criar
-      soluções inovadoras para o mundo.</li>
-  </section>
+  <div class="interface">
+    <section class="finalizar">
+      <h1>
+        IOT - INTERNET DAS COISAS
+      </h1>
+      <li>
+        <a href="https://maper.info/2vNhu6asdas" target="_blank">
+          Cadastra-se
+        </a>
+      </li>
+
+      <video src="../static/IOT - INTERNET DAS COISAS.mp4" loop muted autoplay>
+      </video>
+      <h2>
+        Habilidades Essenciais para Programar em IoT
+      </h2>
+      <li>
+        A Internet das Coisas (IoT) conecta dispositivos físicos à internet, permitindo a coleta e troca de dados em
+        tempo real. Programar para a IoT exige um conjunto de habilidades específicas:
+      </li>
+      <h3>
+        1. Hardware e Eletrônica
+      </h3>
+      <li>
+        Componentes básicos: Microcontroladores, sensores, atuadores, LEDs etc.
+      </li>
+      <li>
+        Protocolos de comunicação: Wi-Fi, Bluetooth, Zigbee, LoRaWAN etc.
+      </li>
+      <li>
+        Protoboard e plataformas de desenvolvimento: Arduino, ESP8266, Raspberry Pi etc.
+      </li>
+      <li>
+        Eletrônica básica: Conceitos de voltagem, corrente, resistência e circuitos.
+      </li>
+      <h3>
+        2. Programação
+      </h3>
+      <li>
+        Linguagens de programação: C/C++, Python, JavaScript etc.
+      </li>
+      <li>
+        Ferramentas de desenvolvimento: IDEs (Arduino IDE, Visual Studio Code etc.), SDKs, frameworks.
+      </li>
+      <li>
+        Programação embarcada: Desenvolvimento de software para microcontroladores.
+      </li>
+      <li>
+        Conceitos de IoT: Arquitetura de sistemas IoT, segurança, nuvem, protocolos de comunicação.</li>
+      <h3>
+        3. Redes e Conectividade
+      </h3>
+      <li>
+        Redes TCP/IP: Funcionamento de redes, endereços IP, protocolos de transporte.
+      </li>
+      <li>
+        Wi-Fi, Bluetooth, Zigbee, LoRaWAN: Características, vantagens e desvantagens de cada protocolo.
+      </li>
+      <li>
+        Segurança de rede: Criptografia, autenticação e autorização para dispositivos IoT.
+      </li>
+      <h3>
+        4. Nuvem e Bancos de Dados
+      </h3>
+      <li>
+        Plataformas de nuvem: AWS, Azure, Google Cloud etc.
+      </li>
+      <li>
+        Armazenamento de dados: NoSQL, SQL, bancos de dados em tempo real.
+      </li>
+      <li>
+        Análise de dados: Ferramentas e técnicas para análise de dados coletados por dispositivos IoT.
+      </li>
+      <h3>
+        5. Soft Skills
+      </h3>
+      <li>
+        Resolução de problemas: Habilidade para identificar e solucionar problemas de hardware e software.
+      </li>
+      <li>
+        Criatividade e inovação: Capacidade de pensar fora da caixa e desenvolver soluções inovadoras para problemas
+        reais.
+      </li>
+      <li>
+        Aprendizagem contínua: A área de IoT está em constante evolução, por isso é importante se manter atualizado
+        com as novas tecnologias e tendências.
+      </li>
+      <li>
+        Com as habilidades e recursos certos, você estará pronto para começar a programar para a IoT e criar
+        soluções inovadoras para o mundo.
+      </li>
+    </section>
+  </div>
 </body>
