--- a/templates/javascript.html
+++ b/templates/javascript.html
@@ -13,68 +13,92 @@
 
 <body>
   <header>
-    <header>
-      <nav>
-        <a href="menu.html">
-          <picture>
-            <img id="menu" src="../static/menu.png" alt="">
-          </picture>
-        </a>
-        <a id="logoPK" href="../index.html">
-          <img src="../static/logoPK.png" alt="">
-        </a>
-        <ul class="minhaDivNavApareceESome">
-          <li>
-            <a href="../templates/cursos.html">
-              CURSOS
-            </a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/ti.udia/" target="_blank">
-              BLOG
-            </a>
-          </li>
-          <li>
-            <a href="sobre.html">
-              SOBRE
-            </a>
-          </li>
-          <li>
-            <a href="hall da fama.html">
-              HALL DA FAMA
-            </a>
-          </li>
-          <li>
-            <a href="validar certificado.html">
-              VALIDAR CERTIFICADO
-            </a>
-          </li>
-          <li>
-            <a href="../templates/formulario de inscrição.html">
-              AFILIADOS
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+    <nav>
+      <a href="menu.html">
+        <picture>
+          <img id="menu" src="../static/menu.png" alt="">
+        </picture>
+      </a>
+      <a id="logoPK" href="../index.html">
+        <img src="../static/logoPK.png" alt="">
+      </a>
+      <ul class="minhaDivNavApareceESome">
+        <li>
+          <a href="../templates/cursos.html">
+            CURSOS
+          </a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/ti.udia/" target="_blank">
+            BLOG
+          </a>
+        </li>
+        <li>
+          <a href="sobre.html">
+            SOBRE
+          </a>
+        </li>
+        <li>
+          <a href="hall da fama.html">
+            HALL DA FAMA
+          </a>
+        </li>
+        <li>
+          <a href="validar certificado.html">
+            VALIDAR CERTIFICADO
+          </a>
+        </li>
+        <li>
+          <a href="../templates/formulario de inscrição.html">
+            AFILIADOS
+          </a>
+        </li>
+      </ul>
+    </nav>
   </header>
-  <section class="finalizar">
-    <h1>PROGRAMANDO EM JAVA SCRIPT</h1>
-    <a href="https://maper.info/2vNhu6asdas" target="_blank"><button>Cadastrar-se</button></a>
-    <video src="../static/PROGRAMANDO EM JAVA SCRIPT.mp4" loop muted autoplay></video>
-    <h1>JavaScript</h1>
-    <p>Linguagem de programação que permite adicionar interatividade ao site, como animações, menus suspensos,
-      validação de formulários e jogos.</p>
-    <h2>Habilidades para desenvolver sites em mobile e PC</h2>
-    <section>
-      <h3>Linguagem de programação</h3>
-      <p><strong>JavaScript:</strong> Permite adicionar interatividade ao site, como animações, menus suspensos,
-        validação de formulários e jogos.</p>
+  <div class="interface">
+    <section class="finalizar">
+      <h1>
+        PROGRAMANDO EM JAVA SCRIPT
+      </h1>
+      <li>
+        <a href="https://maper.info/2vNhu6asdas" target="_blank">
+          Cadastrar-se
+        </a>
+      </li>
+      <video src="../static/PROGRAMANDO EM JAVA SCRIPT.mp4" loop muted autoplay>
+      </video>
+      <h1>
+        JavaScript
+      </h1>
+      <p>
+        Linguagem de programação que permite adicionar interatividade ao site, como animações, menus suspensos,
+        validação de formulários e jogos.
+      </p>
+      <h2>
+        Habilidades para desenvolver sites em mobile e PC
+      </h2>
+      <section>
+        <h3>
+          Linguagem de programação
+        </h3>
+        <p>
+          <strong>
+            JavaScript:
+          </strong>
+          Permite adicionar interatividade ao site, como animações, menus suspensos,
+          validação de formulários e jogos.
+        </p>
+      </section>
+      <section>
+        <h3>
+          Frameworks e bibliotecas
+        </h3>
+        <p>
+          Ferramentas que facilitam o desenvolvimento, fornecendo código pré-escrito para funcionalidades comuns,
+          como sliders, galerias de imagens e carrosséis.
+        </p>
+      </section>
     </section>
-    <section>
-      <h3>Frameworks e bibliotecas</h3>
-      <p>Ferramentas que facilitam o desenvolvimento, fornecendo código pré-escrito para funcionalidades comuns,
-        como sliders, galerias de imagens e carrosséis.</p>
-    </section>
-  </section>
+  </div>
 </body>
