--- a/templates/python.html
+++ b/templates/python.html
@@ -4,12 +4,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../static/style.css" />
-    <link rel="shortcut icon" href="../static/logoPK.png" type="image/x-icon" />
-    <title>INFOPRODUTOS</title>
-  </head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../static/style.css" />
+  <link rel="shortcut icon" href="../static/logoPK.png" type="image/x-icon" />
+  <title>INFOPRODUTOS</title>
+</head>
 
 <body>
   <header>
@@ -56,42 +56,102 @@
       </ul>
     </nav>
   </header>
+  <div class="interface">
     <section class="finalizar">
-        <h1>PROGRAMANDO EM PYTHON</h1>
-        <a href="https://maper.info/2vNhu6asdas" target="_blank"><button>Cadastrar-se</button></a>
-        <video src="../static/PROGRAMANDO EM PYTHON.mp4" loop autoplay muted></video>
-             <h2>Habilidades básicas para desenvolver sites em mobile e PC</h2>
-        <p>Para desenvolver sites em mobile e PC, você precisa dominar algumas habilidades básicas, como:</p>
-        <h2>Habilidades Básicas para Começar a Programar em Python</h2>
-        <p>Para começar a programar em Python, você precisa dominar algumas habilidades básicas:</p>
-        <section>
-            <h3>Conceitos básicos de programação</h3>
-            <li>Variáveis: Armazenam dados na memória do computador.</li>
-            <li>Tipos de dados: Números inteiros, decimais, strings, booleanos etc.</li>
-            <li>Operadores: Operações matemáticas e lógicas.</li>
-            <li>Estruturas de controle: Condicionais (if, else), loops (for, while).</li>
-            <li>Funções: Blocos de código reutilizáveis.</li>
-        </section>
-        <h3>Sintaxe de Python</h3>
-        <li>Indentação para organizar o código.</li>
-        <li>Palavras-chave como if, for, def etc.</li>
-        <li>Pontuação como parênteses, colchetes e chaves.</li>
-        <section>
-            <h3>Orientação a objetos</h3>
-            <li>Classes e objetos.</li>
-            <li>Atributos e métodos.</li>
-            <li>Herança e polimorfismo.</li>
-        </section>
-        <h3>Ferramentas e bibliotecas</h3>
-        <li>Interpretador Python.</li>
-        <li>IDEs como PyCharm e VS Code.</li>
-        <li>Bibliotecas padrão como os, math, re.</li>
-        <section>
-            <h3>Depuração</h3>
-            <li>Encontrar e corrigir erros no código.</li>
-            <li>Ferramentas de depuração como pdb.</li>
-            <p>Com essas habilidades básicas, você estará pronto para começar a programar em Python e criar seus
-                próprios programas.</p>
-        </section>
+      <h1>PROGRAMANDO EM PYTHON</h1>
+
+      <li>
+        <a href="https://maper.info/2vNhu6asdas" target="_blank">
+          Cadastrar-se
+        </a>
+      </li>
+      <video src="../static/PROGRAMANDO EM PYTHON.mp4" loop autoplay muted>
+      </video>
+      <h2>
+        Habilidades básicas para desenvolver sites em mobile e PC
+      </h2>
+      <p>
+        Para desenvolver sites em mobile e PC, você precisa dominar algumas habilidades básicas, como:
+      </p>
+      <h2>
+        Habilidades Básicas para Começar a Programar em Python
+      </h2>
+      <p>
+        Para começar a programar em Python, você precisa dominar algumas habilidades básicas:
+      </p>
+      <section>
+        <h3>
+          Conceitos básicos de programação
+        </h3>
+        <li>
+          Variáveis: Armazenam dados na memória do computador.
+        </li>
+        <li>
+          Tipos de dados: Números inteiros, decimais, strings, booleanos etc.
+        </li>
+        <li>
+          Operadores: Operações matemáticas e lógicas.
+        </li>
+        <li>
+          Estruturas de controle: Condicionais (if, else), loops (for, while).
+        </li>
+        <li>
+          Funções: Blocos de código reutilizáveis.
+        </li>
+      </section>
+      <h3>
+        Sintaxe de Python
+      </h3>
+      <li>
+        Indentação para organizar o código.
+      </li>
+      <li>
+        Palavras-chave como if, for, def etc.
+      </li>
+      <li>
+        Pontuação como parênteses, colchetes e chaves.
+      </li>
+      <section>
+        <h3>
+          Orientação a objetos
+        </h3>
+        <li>
+          Classes e objetos.
+        </li>
+        <li>
+          Atributos e métodos.
+        </li>
+        <li>
+          Herança e polimorfismo.
+        </li>
+      </section>
+      <h3>
+        Ferramentas e bibliotecas
+      </h3>
+      <li>
+        Interpretador Python.
+      </li>
+      <li>
+        IDEs como PyCharm e VS Code.
+      </li>
+      <li>
+        Bibliotecas padrão como os, math, re.
+      </li>
+      <section>
+        <h3>
+          Depuração
+        </h3>
+        <li>
+          Encontrar e corrigir erros no código.
+        </li>
+        <li>
+          Ferramentas de depuração como pdb.
+        </li>
+        <p>
+          Com essas habilidades básicas, você estará pronto para começar a programar em Python e criar seus
+          próprios programas.
+        </p>
+      </section>
     </section>
+  </div>
 </body>
