--- a/templates/cursos.html
+++ b/templates/cursos.html
@@ -63,19 +63,23 @@
       <ul id="cursos" class="lista" style="columns: 4; background-color: white; box-shadow: 0 0 0 ;">
         <a href="IOT.html" target="_blank">
           IOT - INTERNET DAS COISAS
-          <video src="../static/IOT - INTERNET DAS COISAS.mp4" loop muted autoplay></video>
+          <video src="../static/IOT - INTERNET DAS COISAS.mp4" loop muted autoplay>
+          </video>
         </a>
         <a href="marcações.html" target="_blank">
           MARCAÇÕES HTML E CSS
-          <video src="../static/MARCAÇÕES HTML E CSS.mp4" loop muted autoplay></video>
+          <video src="../static/MARCAÇÕES HTML E CSS.mp4" loop muted autoplay>
+          </video>
         </a>
         <a href="python.html" target="_blank">
           PROGRAMANDO EM PYTHON
-          <video src="../static/PROGRAMANDO EM PYTHON.mp4" loop muted autoplay></video>
+          <video src="../static/PROGRAMANDO EM PYTHON.mp4" loop muted autoplay>
+          </video>
         </a>
         <a href="javascript.html" target="_blank">
           PROGRAMANDO EM JAVA SCRIPT
-          <video src="../static/PROGRAMANDO EM JAVA SCRIPT.mp4" loop muted autoplay></video>
+          <video src="../static/PROGRAMANDO EM JAVA SCRIPT.mp4" loop muted autoplay>
+          </video>
         </a>
       </ul>
     </div>
