--- a/templates/cursos.html
+++ b/templates/cursos.html
@@ -59,7 +59,9 @@
   <div class="interface">
     <img style="float: right;" src="../static/fundo.png" alt="">
     <div id="loocursos">
-      <h2>Infoprodutos: Cursos Online para Você Aprender e Crescer!</h2>
+      <h1>
+        Infoprodutos: Cursos Online para Você Aprender e Crescer!
+      </h2>
       <ul id="cursos" class="lista" style="columns: 4; background-color: white; box-shadow: 0 0 0 ;">
         <a href="IOT.html" target="_blank">
           IOT - INTERNET DAS COISAS
