--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -58,33 +58,77 @@
   </header>
   <div class="interface">
     <section id="sobre">
-      <h2>A INFOPRODUTOS.ORG é a parceira ideal para empresas e profissionais que buscam:</h2>
+      <h2>
+        A INFOPRODUTOS.ORG é a parceira ideal para empresas e profissionais que buscam:
+      </h2>
       <ul>
-        <li>Soluções criativas e inovadoras para seus projetos de comunicação.</li>
-        <li>Uma equipe experiente e dedicada a entregar resultados excepcionais.</li>
-        <li>Uma parceria de confiança para impulsionar o crescimento e o sucesso do seu negócio.</li>
+        <li>
+          Soluções criativas e inovadoras para seus projetos de comunicação.
+        </li>
+        <li>
+          Uma equipe experiente e dedicada a entregar resultados excepcionais.
+        </li>
+        <li>
+          Uma parceria de confiança para impulsionar o crescimento e o sucesso do seu negócio.</li>
       </ul>
-      <h2>Nossa Missão</h2>
-      <li>Elevar marcas e ideias a novos patamares</li>
-      <li>Criar conexões autênticas</li>
-      <li>Gerar resultados tangíveis</li>
-      <h2>Nossa Visão</h2>
+      <h1>
+        Nossa Missão
+      </h2>
+      <li>
+        Elevar marcas e ideias a novos patamares
+      </li>
+      <li>
+        Criar conexões autênticas
+      </li>
+      <li>
+        Gerar resultados tangíveis
+      </li>
+      <h2>
+        Nossa Visão
+      </h2>
       <p style="background-color: #230d731a;">
         Ser a empresa de produção referência em criatividade, inovação e excelência, reconhecida por sua capacidade de
-        gerar resultados excepcionais para seus clientes.</p>
-      <h2>Nossos Valores</h2>
-      <li>Criatividade</li>
-      <li>Paixão</li>
-      <li>Excelência</li>
-      <li>Comprometimento</li>
-      <li>Transparência</li>
-      <li>Respeito</li>
-      <h2>O que nos diferencia</h2>
-      <li>Experiência e Expertise</li>
-      <li>Criatividade Inovadora</li>
-      <li>Visão Estratégica</li>
-      <li>Foco em Resultados</li>
-      <li>Atendimento Personalizado</li>
+        gerar resultados excepcionais para seus clientes.
+      </p>
+      <h2>
+        Nossos Valores
+      </h2>
+      <li>
+        Criatividade
+      </li>
+      <li>
+        Paixão
+      </li>
+      <li>
+        Excelência
+      </li>
+      <li>
+        Comprometimento
+      </li>
+      <li>
+        Transparência
+      </li>
+      <li>
+        Respeito
+      </li>
+      <h2>
+        O que nos diferencia
+      </h2>
+      <li>
+        Experiência e Expertise
+      </li>
+      <li>
+        Criatividade Inovadora
+      </li>
+      <li>
+        Visão Estratégica
+      </li>
+      <li>
+        Foco em Resultados
+      </li>
+      <li>
+        Atendimento Personalizado
+      </li>
       </ul>
       <h2 style="text-align: center;">
         <strong>
@@ -97,9 +141,9 @@
       </p>
       <p style="background-color: white;">
         Clique
-          <a href="https://iplis.ru/meu-portifolio" target="_blank">
-            aqui
-          </a>
+        <a href="https://iplis.ru/meu-portifolio" target="_blank">
+          aqui
+        </a>
         para ter mais informações do nosso
         <strong>
           Portifolio
