--- a/static/style.css
+++ b/static/style.css
@@ -336,7 +336,10 @@ ul {
     margin-top: 70px;
 }
 
-#sobre ul li {
+#sobre ul {
+    columns: 2;
+    background-color: white;
+    box-shadow: 0px 0px 0px;
     border-radius: 1px solid gray;
 }
 
@@ -428,6 +431,5 @@ a {
 #produtosPng{
     display: block;
     margin: auto;
-    float: left;
-    width: 25%;
+    width: 85px;
 }
